# ToSConOpCpp

./: .gitignore  CMakeLists.txt  README.md
include/: node_tos.h  tree_of_shapes.h  tree_of_shapes_edit.h
src/: main.cpp  node_tos.cpp  tree_of_shapes.cpp  tree_of_shapes_edit.cpp
